함수 - 명시적 this 에 관하여

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
     <!-- <script type="module" defer src="./src/main.ts"></script> -->
     <!-- <script type="module" defer src="./src/main2.ts"></script> -->
-    <script type="module" defer src="./src/main2.ts"></script>
+    <!-- <script type="module" defer src="./src/main3.ts"></script> -->
+    <!-- <script type="module" defer src="./src/main4.ts"></script> -->
+    <!-- <script type="module" defer src="./src/main5.ts"></script> -->
+    <script type="module" defer src="./src/main6.ts"></script>
   </head>
   <body></body>
 </html>
