클래스와 클래스접근자에 관하여

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- <script type="module" defer src="./src/main3.ts"></script> -->
     <!-- <script type="module" defer src="./src/main4.ts"></script> -->
     <!-- <script type="module" defer src="./src/main5.ts"></script> -->
-    <script type="module" defer src="./src/main6.ts"></script>
+    <!-- <script type="module" defer src="./src/main6.ts"></script> -->
+    <!-- <script type="module" defer src="./src/main7.ts"></script> -->
+    <script type="module" defer src="./src/main8.ts"></script>
   </head>
   <body></body>
 </html>
