--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- <script type="module" defer src="./src/main5.ts"></script> -->
     <!-- <script type="module" defer src="./src/main6.ts"></script> -->
     <!-- <script type="module" defer src="./src/main7.ts"></script> -->
-    <script type="module" defer src="./src/main8.ts"></script>
+    <!-- <script type="module" defer src="./src/main8.ts"></script> -->
+    <script type="module" defer src="./src/main9.ts"></script>
   </head>
   <body></body>
 </html>
